# wecat3d_ros_packages

./: .gitignore  README.md
src/pcds/: merged_encoder_output2.pcd
src/wecat3d_profile_publisher/: CMakeLists.txt  package.xml
src/wecat3d_profile_publisher/scripts/: profile_main.py  publish_pcd.py
src/wecat3d_profile_publisher/src/: encoder_pointcloud.cpp  encoder_test.cpp  merge_and_save_node.cpp  merged.pcd  profile_generator.cpp  profile_publisher_intensity.cpp  profile_publisher_node.cpp  publish_pcd.py  save_profile_to_pcd.cpp
src/wecat3d_sdk/: CMakeLists.txt  package.xml
src/wecat3d_sdk/lib/: libEthernetScanner.so.1  test_working_generation.py  working_profile_genration.py
src/wecat3dtool/: CMakeLists.txt  package.xml
src/wecat3dtool/src/: check_connection.cpp  get_readings.cpp  get_x_y_pts.cpp  get_x_y_z_pts.cpp  test2.cpp  test_profile.cpp  test_x_y_z_print.cpp  x_z_cont.cpp
