<?xml version="1.0"?>
<package format="3">
  <name>wecat3dtool</name>
  <version>0.1.0</version>
  <description>Standalone tools for interacting with the weCat3D sensor.</description>

  <maintainer email="atharva@example.com">Atharva</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

